--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -7,12 +7,15 @@ body {
     height: 100%;
 
     color: white;
-    background-color: black;
 }
 
 html {
     width: 100%;
     height: 100%;
+}
+
+body, html {
+    background: url('../img/black-orchid.png') #222;
 }
 
 #app {
@@ -104,7 +107,12 @@ a {
             padding-bottom: 10px;
 
             border-bottom: 1px solid fade-out(white, .7);
-            background: black;
+
+            @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
+                background: transparent;
+                backdrop-filter: blur(10px);
+            }
+            background: rgba(0, 0, 0, 0.75);
         }
         .nav-link.active {
             outline: none;
@@ -289,8 +297,6 @@ body {
 }
 
 #skills {
-    background: url('../img/black-felt.png') #333;
-
     .list-group .list-group-item {
         background-color: transparent;
         border: none;
