Use another body font and fix heading size

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -1,5 +1,8 @@
 @import "~bootstrap/scss/functions";
 @import "variables";
+
+@import url("https://fonts.googleapis.com/css?family=Raleway:300|Roboto+Slab:300");
+
 body {
     position: relative;
 
