Space nav items out

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -94,6 +94,8 @@ a {
     }
     .navbar-nav {
         .nav-item {
+            margin: auto 10px;
+
             a {
                 &:hover,
                &.active {
