--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -292,7 +292,7 @@ $text-muted: $gray-600 !default;
 $blockquote-small-color:  $gray-600 !default;
 $blockquote-font-size:    ($font-size-base * 1.25) !default;
 
-$hr-border-color: rgba($black,.1) !default;
+$hr-border-color: rgba($white,.1) !default;
 $hr-border-width: $border-width !default;
 
 $mark-padding: .2em !default;
