--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -21,6 +21,9 @@ body {
 
     min-height: 100%;
     width: 100%;
+
+    padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 h1,
@@ -205,56 +208,23 @@ footer {
     }
 }
 
-.btn-circle {
-    transition: background 0.3s ease-out;
-
-    color: white;
-    &:focus,
-    &:hover {
-        color: $primary;
-    }
-}
-
-.content-section {
-    padding-top: 100px;
-    padding-bottom: 65px;
-}
-
-.download-section {
-    color: white;
-    background-color: black;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
 #map {
     width: 100%;
     height: 300px;
-}
-@media(min-width:992px) {
-    .content-section {
-        padding-top: 100px;
-        padding-bottom: 65px;
-    }
-    #map {
+
+    @media(min-width:992px) {
         height: 350px;
     }
 }
 
 .btn {
-    font-weight: 400;
-
     transition: all 0.3s ease-out;
-
-    border-radius: 0;
 }
 
 .btn-default {
     color: $primary;
     border: 1px solid $primary;
-    background-color: transparent;
+    background-color: $gray-900;
     &:focus,
     &:hover {
         color: black;
