--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -9,7 +9,7 @@ body, html {
 
     width: 100%;
     height: 100%;
-    background: url('../img/black-orchid.png') #222;
+    background: url('../images/black-orchid.png') #222;
 }
 
 body {
