--- a/resources/assets/sass/svg.scss
+++ b/resources/assets/sass/svg.scss
@@ -1,6 +1,7 @@
 .svg-icon {
     display: inline-block;
     width: 1rem;
+    height: 1.25rem;
     vertical-align: middle;
     color: inherit;
     fill: none;
