--- a/resources/assets/sass/svg.scss
+++ b/resources/assets/sass/svg.scss
@@ -1,4 +1,5 @@
 .svg-icon {
+    position: relative;
     display: inline-block;
     width: 1rem;
     height: 1.25rem;
@@ -6,7 +7,7 @@
     color: inherit;
     fill: none;
     stroke: currentColor;
-    margin-bottom: 0.16rem;
+    margin-bottom: 3px;
 
     &.svg-fill {
         fill: currentColor;
