--- a/resources/assets/sass/svg.scss
+++ b/resources/assets/sass/svg.scss
@@ -1,13 +1,16 @@
 .svg-icon {
-    position: relative;
     display: inline-block;
-    width: 1rem;
-    height: 1.25rem;
-    vertical-align: middle;
+    font-size: inherit;
+    height: 1em;
     color: inherit;
     fill: none;
     stroke: currentColor;
-    margin-bottom: 3px;
+    vertical-align: -9%;
+
+    &.svg-fw {
+        text-align: center;
+        width: 1.25em;
+    }
 
     &.svg-fill {
         fill: currentColor;
