Force image aspect ratio on projects page

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -52,7 +52,7 @@ p {
 }
 
 a {
-    transition: all 0.2s ease-in-out;
+    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 
     color: $primary;
     &:focus,
@@ -321,4 +321,8 @@ body {
 
 .mono {
     font-family: $font-family-monospace;
+}
+
+.overflow-hidden {
+    overflow: hidden;
 }
