--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -307,3 +307,18 @@ body {
 .overflow-hidden {
     overflow: hidden;
 }
+
+.navbar-nav {
+    position: relative;
+    
+    .current {
+        z-index: -1;
+        background-color: #333;
+        border-radius: 5px;
+        position: absolute;
+        left: 0;
+        width: 100px;
+        height: 100%;
+        margin-left: 7px;
+    }
+}
