Not using Raleway anymore

--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap/scss/mixins";
 @import "variables";
 
-@import url("https://fonts.googleapis.com/css?family=Raleway:300|Roboto+Slab:300");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:300");
 
 @import "svg";
 
