--- a/resources/assets/sass/main.scss
+++ b/resources/assets/sass/main.scss
@@ -5,48 +5,33 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Slab:300");
 
 @import "svg";
+@import "transitions";
 
 body, html {
     margin: 0;
-    padding: 0;
-
     width: 100%;
     height: 100%;
-    background: url('../images/black-orchid.png') #222;
-}
+    padding: 0;
 
-body {
     color: white;
+
+    background: url('../images/black-orchid.png') #222;
+
+    -webkit-tap-highlight-color: fade-out(white, .8);
 }
 
-#app {
-    position: relative;
-
-    min-height: 100%;
-    width: 100%;
-
-    padding-bottom: 100px;
-    @include media-breakpoint-down(xs) {
-        padding-bottom: 150px;
-    }
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     margin: 0 0 35px;
 
     letter-spacing: 1px;
 }
 
 p {
+    margin: 0 0 25px;
+
     font-size: 16px;
     line-height: 1.5;
 
-    margin: 0 0 25px;
     @include media-breakpoint-up(md) {
         font-size: 18px;
         line-height: 1.6;
@@ -62,63 +47,111 @@ a {
     &:focus,
     &:hover {
         text-decoration: none;
-
         color: lighten($primary, 20%);
     }
 }
 
-nav.navbar {
-    background-color: rgba($gray-900, 0.95);
+::selection {
+    background: #fcfcfc;
+    background: fade-out(white, .8);
+    text-shadow: none;
+}
 
+img::selection {
+    background: transparent;
+}
+
+#app {
+    position: relative;
+
+    min-height: 100%;
+    width: 100%;
+    padding-bottom: 100px;
+
+    @include media-breakpoint-down(xs) {
+        padding-bottom: 150px;
+    }
+
+    &:not(.Home) > nav.navbar {
+        @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
+            background-color: rgba($gray-900, 0.25);
+            backdrop-filter: blur(10px);
+        }
+
+        @include media-breakpoint-up(md) {
+            &.navbar-shrink {
+                @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
+                    background-color: rgba($gray-900, 0.25);
+                    backdrop-filter: blur(10px);
+                }
+            }
+        }
+    }
+
+    &.Home {
+        footer {
+            opacity: 0;
+            pointer-events: none;
+        }
+    }
+}
+
+.navbar {
     border-bottom: 1px solid fade-out(white, .7);
 
-    .navbar-toggler {
-        font-size: 14px;
+    background-color: rgba($gray-900, 0.95);
 
+    .navbar-toggler {
+        border: 1px solid white;
         padding: 11px;
 
+        font-size: 14px;
         color: white;
-        border: 1px solid white;
     }
+
     .navbar-brand {
         font-family: $font-family-serif;
         font-weight: $font-weight-light;
     }
+
     a {
         color: $gray-400;
     }
+
     .navbar-nav {
         .nav-item {
             margin: auto 10px;
 
             a {
-                &:hover,
-                &.active {
+                &:hover, &.active {
                     color: $white;
                 }
             }
         }
     }
     @include media-breakpoint-up(md) {
+        transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
+
+        border-bottom: none;
         padding-top: 20px;
         padding-bottom: 20px;
 
-        transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
+        background: transparent;
+
         letter-spacing: 1px;
 
-        border-bottom: none;
-        background: transparent;
         &.navbar-shrink {
+            border-bottom: 1px solid fade-out(white, .7);
             padding-top: 10px;
             padding-bottom: 10px;
 
-            border-bottom: 1px solid fade-out(white, .7);
-
             background-color: rgba($gray-900, 0.95);
         }
+
         .nav-link.active {
-            outline: none;
             background-color: rgba(white, .3);
+            outline: none;
+
             &:hover {
                 color: white;
             }
@@ -126,49 +159,28 @@ nav.navbar {
     }
 }
 
-#app:not(.Home) nav.navbar {
-    @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
-        background-color: rgba($gray-900, 0.25);
-        backdrop-filter: blur(10px);
-    }
-    @include media-breakpoint-up(md) {
-        &.navbar-shrink {
-            @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
-                background-color: rgba($gray-900, 0.25);
-                backdrop-filter: blur(10px);
-            }
-        }
-    }
-}
-
-#app.Home {
-    footer {
-        opacity: 0;
-        pointer-events: none;
-    }
-}
-
 footer {
     position: absolute;
-    width: 100%;
     bottom: 0;
-
-    background-color: $gray-900;
-
-    padding: 20px 0;
-    border-top: 1px solid fade-out(white, .7);
 
     transition: opacity, 0.3s ease-in-out;
 
-    p {
-        font-size: 14px;
+    border-top: 1px solid fade-out(white, .7);
+    width: 100%;
+    padding: 20px 0;
 
+    background-color: $gray-900;
+
+    p {
         margin: 0;
+
+        font-size: 14px;
     }
 }
 
 .masthead {
     position: fixed;
+
     display: table;
 
     width: 100%;
@@ -177,42 +189,49 @@ footer {
 
     text-align: center;
 
-    color: white;
     background-color: black;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
     background-size: cover;
+
+    color: white;
+
     .intro-bg {
-        background: #000 no-repeat bottom center scroll;
-        background-color: black;
-        background-size: cover;
-        float: left;
         position: absolute;
-        left: 0;
         top: 0;
+        left: 0;
+        float: left;
+
+        opacity: 0;
+
+        transition: opacity 0.5s ease-in-out;
+
         width: 100%;
         height: 100%;
-        opacity: 0;
-        transition: opacity 0.5s ease-in-out;
+
+        background: #000 no-repeat bottom center / cover scroll;
     }
+
     .intro-body {
         display: table-cell;
 
         vertical-align: middle;
+
         .brand-heading {
             font-size: 50px;
         }
+
         .intro-text {
             font-size: 18px;
         }
     }
+
     @include media-breakpoint-up(md) {
         padding: 0;
+
         .intro-body {
             .brand-heading {
                 font-size: 100px;
             }
+
             .intro-text {
                 font-size: 22px;
             }
@@ -238,82 +257,23 @@ footer {
 }
 
 .btn-default {
-    color: $primary;
     border: 1px solid $primary;
+
     background-color: $gray-900;
-    &:focus,
-    &:hover {
-        color: black;
+
+    color: $primary;
+
+    &:focus, &:hover {
         border: 1px solid $primary;
-        outline: none;
+
         background-color: $primary;
+
+        color: black;
+        outline: none;
     }
 }
 
-ul.banner-social-buttons {
-    margin-top: 0;
-    @include media-breakpoint-down(xl) {
-        margin-top: 15px;
-    }
-    @include media-breakpoint-down(md) {
-        li {
-            display: block;
-
-            margin-bottom: 20px;
-            padding: 0;
-            &:last-child {
-                margin-bottom: 0;
-            }
-        }
-    }
-}
-
-::-moz-selection {
-    background: #fcfcfc;
-    background: fade-out(white, .8);
-    text-shadow: none;
-}
-
-::selection {
-    background: #fcfcfc;
-    background: fade-out(white, .8);
-    text-shadow: none;
-}
-
-img::selection {
-    background: transparent;
-}
-
-img::-moz-selection {
-    background: transparent;
-}
-
-body {
-    -webkit-tap-highlight-color: fade-out(white, .8);
-}
-
-.fade-enter-active, .fade-leave-active {
-    transition: opacity .2s cubic-bezier(.55,0,.1,1);
-}
-.fade-enter, .fade-leave-active {
-    opacity: 0;
-}
-.child-view {
-    transition: opacity .2s cubic-bezier(0.22, 0.61, 0.36, 1), transform .2s cubic-bezier(0.22, 0.61, 0.36, 1);
-}
-.slide-right-leave-active, .slide-left-leave-active {
-    transition: opacity .2s cubic-bezier(0.55, 0.06, 0.68, 0.19), transform .2s cubic-bezier(0.55, 0.06, 0.68, 0.19);
-}
-.slide-left-enter, .slide-right-leave-active {
-    opacity: 0;
-    transform: translate(30px, 0);
-}
-.slide-left-leave-active, .slide-right-enter {
-    opacity: 0;
-    transform: translate(-30px, 0);
-}
-
-#skills {
+#app.Skills {
     .list-group .list-group-item {
         background-color: transparent;
         border: none;
@@ -334,10 +294,20 @@ body {
     }
 }
 
-.card {
-    @include media-breakpoint-down(xs) {
+.banner-social-buttons.list-inline {
+    margin-top: 0;
+
+    @include media-breakpoint-down(xl) {
         margin-top: 15px;
-        margin-bottom: 15px;
+    }
+
+    @include media-breakpoint-down(md) {
+        .list-inline-item {
+            display: block;
+
+            margin-bottom: 20px;
+            padding: 0;
+        }
     }
 }
 
