:heavy_plus_sign: Replace Google Fonts import with local Roboto Slab package

--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -2,7 +2,7 @@
 @import "bootstrap/scss/mixins";
 @import "variables";
 
-@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:300");
+@import "@fontsource/roboto-slab/latin-300.css";
 
 @import "svg";
 @import "transitions";
