--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -71,11 +71,11 @@ img::selection {
 }
 
 nav.navbar {
-    border-bottom: 1px solid fade-out(white, .7);
-
-    background-color: rgba($gray-900, 0.95);
+    background-color: transparent;
+    border-bottom: 1px solid transparent;
 
     .navbar-toggler {
+        background-color: rgba($gray-900, 0.45);
         border: 1px solid white;
         padding: 11px;
 
@@ -83,40 +83,36 @@ nav.navbar {
         color: white;
     }
 
+    transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out, border-bottom-color 0.3s ease-in-out;
+
+    @include media-breakpoint-down(md) {
+        &:has(.navbar-toggler[aria-expanded=true]) {
+            background-color: rgba($gray-900, 0.85) !important;
+            border-bottom: 1px solid fade-out(white, .8);
+            backdrop-filter: blur(10px);
+        }
+    }
+
     .navbar-brand {
         font-family: $font-family-serif;
         font-weight: $font-weight-light;
     }
 
-    .navbar-nav {
-        .nav-item {
-            margin: auto 10px;
+    .navbar-nav .nav-item {
+        margin: auto 10px;
 
-            a {
-                &:hover, &.active {
-                    color: $white;
-                }
-            }
+        a:hover, a.active {
+            color: $white;
         }
     }
 
     @include media-breakpoint-up(md) {
-        transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out, border-bottom-color 0.3s ease-in-out;
-
-        border-bottom: 1px solid transparent;
         padding-top: 20px;
         padding-bottom: 20px;
 
-        background: transparent;
-
-        letter-spacing: 1px;
-
         &.navbar-shrink {
-            border-bottom: 1px solid fade-out(white, .7);
             padding-top: 10px;
             padding-bottom: 10px;
-
-            background-color: rgba($gray-900, 0.95);
         }
 
         .nav-link.active {
@@ -129,20 +125,10 @@ nav.navbar {
         }
     }
 
-    &:not(.minimal) {
-        @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
-            background-color: rgba($gray-900, 0.25);
-            backdrop-filter: blur(10px);
-        }
-
-        @include media-breakpoint-up(md) {
-            &.navbar-shrink {
-                @supports ((-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px))) {
-                    background-color: rgba($gray-900, 0.25);
-                    backdrop-filter: blur(10px);
-                }
-            }
-        }
+    &.navbar-shrink:not(.minimal) {
+        background-color: rgba($gray-900, 0.65);
+        backdrop-filter: blur(10px);
+        border-bottom: 1px solid fade-out(white, .8);
     }
 }
 
