:lipstick: Clean up selection styles

--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -51,14 +51,10 @@ a {
     }
 }
 
-::selection {
+:not(input, textarea)::selection {
     background: #fcfcfc;
     background: fade-out(white, .8);
     text-shadow: none;
-}
-
-img::selection {
-    background: transparent;
 }
 
 #app {
