:lipstick: (nav): Center nav items on mobile

--- a/frontend/src/sass/main.scss
+++ b/frontend/src/sass/main.scss
@@ -94,7 +94,8 @@ nav.navbar {
         font-weight: $font-weight-light;
     }
 
-    .navbar-nav .nav-item {
+    .nav-item {
+        text-align: center;
         margin: auto 10px;
 
         a:hover, a.active {
