--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/mixins";
 @import "variables";
+@import "bootstrap/scss/bootstrap";
 
 @import "@fontsource/roboto-slab/latin-300.css";
 
