--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -8,11 +8,6 @@
 @import "transitions";
 
 body, html {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-
     color: white;
 
     background: url('../assets/black-orchid.png') #222;
@@ -48,12 +43,7 @@ a {
 }
 
 #app {
-    padding-bottom: 100px;
     overflow-x: hidden;
-
-    @include media-breakpoint-down(xs) {
-        padding-bottom: 150px;
-    }
 }
 
 nav.navbar {
@@ -120,19 +110,13 @@ nav.navbar {
 }
 
 footer {
-    position: absolute;
-    bottom: 0;
-
-    transition: opacity, 0.3s ease-in-out;
-
     border-top: 1px solid fade-out(white, .7);
-    width: 100%;
     padding: 20px 0;
 
     background-color: $gray-900;
 }
 
-.content-section {
+.pt-page {
     padding-top: 100px;
 }
 
