--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -251,7 +251,7 @@ $font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, 
   Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 $font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New",
   monospace !default;
-$font-family-serif: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-serif: "Zilla Slab", sans-serif;
 $font-family-base: $font-family-sans-serif !default;
 // stylelint-enable value-keyword-case
 
