--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -122,11 +122,16 @@ footer {
   padding-top: 100px;
 }
 
-.vue-map-container {
+.map {
+  width: 100%;
   height: 300px;
+  object-fit: cover;
 
   @include media-breakpoint-up(lg) {
     height: 500px;
+  }
+  @media (min-width: 3000px) {
+    width: 1140px;
   }
 }
 
