--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -1,157 +1,39 @@
-@import "bootstrap/scss/functions";
-@import "bootstrap/scss/mixins";
-@import "variables";
-@import "bootstrap/scss/bootstrap";
+@use "transitions";
 @import "@fontsource/zilla-slab/latin-300.css";
-
-@import "transitions";
+@import "@fontsource/zilla-slab/latin-500.css";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body,
 html {
-  color: white;
-
-  background: url("../assets/black-orchid.png") #222;
-
-  -webkit-tap-highlight-color: fade-out(white, 0.8);
-}
-
-p {
-  font-size: 16px;
-  line-height: 1.5;
-
-  @include media-breakpoint-up(md) {
-    font-size: 18px;
-    line-height: 1.6;
-  }
-}
-
-a {
-  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
-
-  color: lighten($primary, 7%);
-  &:focus,
-  &:hover {
-    text-decoration: none;
-    color: lighten($primary, 25%);
-  }
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
 
 :not(input, textarea)::selection {
   background: #fcfcfc;
-  background: fade-out(white, 0.8);
+  background: rgba(255, 255, 255, 0.2);
   text-shadow: none;
 }
 
-#app {
-  overflow-x: hidden;
-}
-
-nav.navbar {
-  background-color: transparent;
-  border-bottom: 1px solid transparent;
-
-  .navbar-toggler {
-    background-color: rgba($gray-900, 0.45);
-    border: 1px solid white;
-    padding: 11px;
-
-    font-size: 14px;
-    color: white;
-  }
-
-  transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out,
-    padding-bottom 0.3s ease-in-out, border-bottom-color 0.3s ease-in-out;
-
-  @include media-breakpoint-down(md) {
-    &:has(.navbar-toggler[aria-expanded="true"]) {
-      background-color: rgba($gray-900, 0.85) !important;
-      border-bottom: 1px solid fade-out(white, 0.8);
-      backdrop-filter: blur(10px);
-    }
-  }
-
-  .navbar-brand {
-    font-family: $font-family-serif;
-    font-weight: $font-weight-light;
-  }
-
-  .nav-item {
-    text-align: center;
-    margin: auto 10px;
-
-    a:hover,
-    a.active {
-      color: $white;
-    }
-  }
-
-  @include media-breakpoint-up(md) {
-    padding-top: 20px;
-    padding-bottom: 20px;
-
-    &.navbar-shrink {
-      padding-top: 10px;
-      padding-bottom: 10px;
-    }
-
-    .nav-link.active {
-      background-color: rgba(white, 0.3);
-      outline: none;
-
-      &:hover {
-        color: white;
-      }
-    }
-  }
-
-  &.navbar-shrink:not(.minimal) {
-    background-color: rgba($gray-900, 0.65);
-    backdrop-filter: blur(10px);
-    border-bottom: 1px solid fade-out(white, 0.8);
-  }
-}
-
-footer {
-  border-top: 1px solid fade-out(white, 0.7);
-  padding: 20px 0;
-
-  background-color: $gray-900;
-}
-
-.pt-page {
-  padding-top: 100px;
-}
-
-.map {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-
-  @include media-breakpoint-up(lg) {
-    height: 500px;
-  }
-  @media (min-width: 3000px) {
-    width: 1140px;
-  }
-}
-
-.icon-spin {
-  animation-name: icon-spin;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-}
-
-@keyframes icon-spin {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-svg {
+svg.icon {
+  display: inline;
   vertical-align: middle;
   transform: translateY(-5%);
+}
+
+@layer utilities {
+  /*
+    Chromium browsers don't render nested backdrop filters.
+    As a workaround, add 'before:' to the outer filter, along with 'before:backdrop-hack':
+
+      <div class="before:backdrop-blur-md before:backdrop-hack>
+        <div class="backdrop-blur-md"></div>
+      </div>
+
+    See https://stackoverflow.com/a/76207141.
+  */
+  .backdrop-hack {
+    @apply absolute inset-0 -z-10;
+  }
 }
