--- a/frontend/src/scss/transitions.scss
+++ b/frontend/src/scss/transitions.scss
@@ -29,12 +29,18 @@
     .slide-right-leave-to {
       opacity: 0;
       transform: translate(30px, 0);
+      @media (prefers-reduced-motion) {
+        transform: translate(10px, 0);
+      }
     }
 
     .slide-left-leave-to,
     .slide-right-enter-from {
       opacity: 0;
       transform: translate(-30px, 0);
+      @media (prefers-reduced-motion) {
+        transform: translate(-10px, 0);
+      }
     }
   }
 }
@@ -49,5 +55,8 @@
   &-enter-from {
     opacity: 0;
     transform: translate(-30px, 0);
+    @media (prefers-reduced-motion) {
+      transform: translate(-10px, 0);
+    }
   }
 }
