--- a/frontend/src/css/main.css
+++ b/frontend/src/css/main.css
@@ -4,21 +4,21 @@
 @import "tailwindcss";
 @plugin "daisyui";
 
-body,
-html {
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
+@theme {
+  --font-display: 'Zilla Slab', sans-serif;
+}
+
+:root {
+  --radius-box: 1rem;
+  --radius-field: 0.5rem;
 }
 
 :not(input, textarea)::selection {
-  background: #fcfcfc;
-  background: rgba(255, 255, 255, 0.2);
-  text-shadow: none;
+  @apply bg-white/20;
 }
 
 svg.icon {
-  display: inline;
-  vertical-align: middle;
-  transform: translateY(-5%);
+  @apply inline;
 }
 
 /*
@@ -33,4 +33,8 @@ svg.icon {
 */
 @utility backdrop-hack {
   @apply absolute inset-0 -z-10;
+}
+
+.badge {
+  @apply rounded-full;
 }
